--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
-    "axios": "^1.6.5",
+    "axios": "^1.6.7",
     "core-js": "^3.8.3",
     "material-design-icons-iconfont": "^6.7.0",
+    "pinia": "^2.1.7",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
